# x-heep

./: .env  .gitignore  .readthedocs.yaml  AnalogMixedSignal.md  BuildingExternalSources.md  CadenceInnovus.md  Debug.md  ExecuteFromFlash.md  ExtendingViaXIF.md  ExternalDevices.md  External_devices.md  IDEs.md  IntegratePeripheral.md  Makefile  Makefile.venv  OpenRoadFlow.md  OpenTitanIP.md  ProgramFlash.md  README.md  TARGET=sim  TODO_PR.md  build  config.test  core-v-mini-mcu-fpga.core  core-v-mini-mcu.core  core-v-mini-mcu.dc.upf  core-v-mini-mcu.dc.upf.tpl  core-v-mini-mcu.upf  core-v-mini-mcu.upf.tpl  core_v_mini_mcu.h  core_v_mini_mcu.sv  core_v_mini_mcu_memory.h  core_v_mini_mcu_pkg.sv  cpu_subsystem.sv  crt0.S  debug.gtkw  dma.hjson  dma_conf.svh  eXtendingHEEP.md  environment.yml  (+54 more)
sw/: CMakeLists.txt  Makefile  gdbInit
sw/applications/0_DOOM/: .gitignore  d_dedicated.c  d_event.h  d_iwad.c  d_loop.c  d_ticcmd.h  deh_doomTop.c  deh_io.c  deh_mapping.c  deh_str.c  deh_str.h  deh_text.c  doomtype.h  hardfault_handler_gcc.c  i_cdmus.c  i_endoom.c  i_input.c  i_joystick.c  i_main.c  i_swap.h  i_system.c  i_system.h  i_timer.c  i_timer.h  i_video.c  i_video.h  m_argv.c  m_cheat.h  m_config.c  m_controls.c  m_misc.c  main.c  memio.c  n_mem.c  n_mem.h  net_client.c  net_common.c  net_dedicated.c  net_defs.h  net_gui.c  (+30 more)
sw/applications/0_DOOM_GPIO/: main.c
sw/applications/0_DOOM_TEST/: main.c  testFiles.txt
sw/applications/0_DOOM_display/: filtered_array.h  main.c
sw/applications/I2C_test/: main.c
sw/applications/PLIC_test/: main.c
sw/applications/app/: main.c
sw/applications/blinky_freertos/: main.c
sw/applications/bsp_flash_profiling/: main.c
sw/applications/bsp_test_read/: main.c
sw/applications/bsp_test_read_dma/: main.c
sw/applications/bsp_test_read_quad/: main.c
sw/applications/bsp_test_read_quad_dma/: main.c
sw/applications/bsp_test_write/: main.c
sw/applications/bsp_test_write_dma/: main.c
sw/applications/bsp_test_write_quad/: main.c
sw/applications/coremark/: core_portme.c  coremark.h  main.c
sw/applications/cpp_example/: test_cpp.cpp
sw/applications/demo_spi_master_slave/: main.c
sw/applications/dma/: dma.h  dma_example.c
sw/applications/dma_example/: dma_example.c  main.c
sw/applications/ecample_sdk_spi_flash_read/: main.c
sw/applications/esp_app/: esp_memory_ops.c  esp_memory_ops.h  main.c
sw/applications/example/: main.c
sw/applications/example_CIC/: main.c
sw/applications/example_adafruit_bonnet/: buttons.c  buttons.h  main.c
sw/applications/example_ams_peripheral/: main.c
sw/applications/example_asm/: add.s  constants.h  main.c  multiply.S
sw/applications/example_bus_error/: main.c
sw/applications/example_cic/: groundtruth.h  main.c
sw/applications/example_clock_gating/: example_clock_gating.c  main.c
sw/applications/example_cpp/: MyClass.cpp  MyClass.hpp  main.cpp  test_cpp.h
sw/applications/example_data_processing_from_flash/: gen_stimuly.py  main.c  main.h  matrices.h
sw/applications/example_divided_CNN_head/: fcn.c  main.h
sw/applications/example_dlc/: main.c  sin_1_8_LC_1_2_FM_8_l_0_3_4.h  test_ecg.h  test_sin_16to8.h
sw/applications/example_dma/: dma_test_macros.h  main.c  test_parameters.c  test_parameters.h
sw/applications/example_dma_2d/: main.c  test_data.h
sw/applications/example_dma_broadcast/: main.c
sw/applications/example_dma_external/: main.c
sw/applications/example_dma_multichannel/: main.c  test_data.h  test_data_flash.h
sw/applications/example_dma_sdk/: main.c
sw/applications/example_dma_signed/: main.c
sw/applications/example_dma_slow_mem/: main.c
sw/applications/example_dma_subaddressing/: buffer.h  main.c  test_data.h
sw/applications/example_dsp/: main  main.c  riscv_abs_f32  riscv_abs_f32.c  riscv_abs_q7.c  riscv_sub_q7.c
sw/applications/example_ext_memory/: main.c
sw/applications/example_ext_peripheral_intr/: main.c
sw/applications/example_external_dma/: main.c
sw/applications/example_external_peripheral/: example_external_peripheral.c  main.c  memcopy_periph.c  memcopy_periph.h  memcopy_periph_regs.h
sw/applications/example_fft/: data.h  datagen.py  fft.h  main.c
sw/applications/example_force_power_gating_core/: example_force_power_gating_core.c
sw/applications/example_freertos_blinky/: main.c
sw/applications/example_gpio_cnt/: example_gpio_cnt.c  main.c
sw/applications/example_gpio_intr/: main.c
sw/applications/example_gpio_toggle/: main.c
sw/applications/example_hyperbus/: main.c
sw/applications/example_i2s/: example_i2s.c  main.c
sw/applications/example_iffifo/: main.c
sw/applications/example_iffifo_broadcast/: main.c
sw/applications/example_iffifo_poll/: main.c
sw/applications/example_im2col/: backup_1.v  backup_2.v  im2colGolden.c  im2colGolden.h  im2col_data.c  im2col_data.h  im2col_data.txt  im2col_golden.c  im2col_golden.h  im2col_input.c  im2col_input.h  im2col_lib.c  im2col_lib.h  im2col_nchw.c  im2col_nchw.h  im2col_spc.c  im2col_spc.h  main.c  nohup.out  plotter.py  script.py  test  test.c  verifHEEP.py  verifHEEP_pynqz2.py  verifheep_lib.py  verification_script.py
sw/applications/example_matadd/: main.c  matrixAdd32.h
sw/applications/example_matadd_interleaved/: main.c  matrixAdd32.h
sw/applications/example_matfadd/: main.c
sw/applications/example_matmul/: gen_stimuly.py  main.c  matrixMul8.h
sw/applications/example_minimal/: main.c
sw/applications/example_multi3x/: main.c
sw/applications/example_pdm2pcm/: example_pdm2pcm.c  main.c
sw/applications/example_power_gating_cgra/: example_power_gating_cgra.c
sw/applications/example_power_gating_core/: example_power_gating_core.c  main.c
sw/applications/example_power_gating_external/: example_power_gating_external.c  main.c
sw/cmake/: riscv.cmake  targets.mak
sw/freertos/: FreeRTOSConfig.h
sw/linker/: link.ld  link.ld.tpl  link_flash_exec.ld.tpl  link_flash_load.ld.tpl  link_flash_load.ld.tpl.backup  link_freertos.ld.tpl  link_spiflash.ld  link_spiflash.ld.tpl  link_spihost.ld  link_spihost.ld.tpl
sw/old_c_mak_e/: riscv.cmake  targets.mak
(+1493 files in other folders)
